# semester-work-suffix-tree-dan

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  count-all-substr-settings.txt  count_all_substr_benchmark.cpp  demo_benchmark.cpp  has-substr-settings.txt  has_substring_benchmark.cpp  tree-creation-settings.txt  tree_creation_benchmark.cpp
benchmark/results/tree_creation/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv  750000.csv
dataset/: generate_csv_dataset.py  substring_generator.py
dataset/data/tree_creation/1/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv  750000.csv
dataset/data/tree_creation/10/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv  750000.csv
dataset/data/tree_creation/2/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv  750000.csv
dataset/data/tree_creation/3/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv  750000.csv
dataset/data/tree_creation/4/: 100.csv  1000.csv  10000.csv  100000.csv  1000000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  (+2 more)
examples/: CMakeLists.txt  examples.cpp
graphics/: count_substr.py  data.csv  has_substr.py  tree_creation.py
include/: data_structure.hpp  suffix_tree.hpp
src/: data_structure.cpp  suffix_tree.cpp
(+60 files in other folders)
